# lares

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  entrypoint.sh
.github/workflows/: buildtest.yml  release.yml
fixtures/: flat.opml  missing.opml  normal.opml
src/: api.rs  cli.rs  client.rs  crawler.rs  error.rs  find.rs  lib.rs  main.rs  model.rs  opml.rs  remote.rs  state.rs  utils.rs
tests/: test_lares.rs  test_lares_cli.rs
