[package]
name = "lares"
version = "0.1.0"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Simple RSS Reader Service (Fever API backend)"
license = "MIT"
homepage = "https://github.com/fanzeyi/lares"
readme = "README.md"
keywords = ["rss", "rssreader", "fever"]
categories = []  # :(

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rusqlite = { version = "0.23", features = ["array", "bundled", "chrono"] }
tide = "0.13.0"
async-std = { version = "1.6", features = ["attributes", "unstable"] }
r2d2_sqlite = "0.16.0"
r2d2 = "0.8.9"
thiserror = "1.0.20"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
rand = "0.7.3"
structopt = "0.3.16"
anyhow = "1.0.32"
surf = "1.0.3"
rss = "1.9.0"
prettytable-rs = "0.8.0"
futures = "0.3.5"
chrono = { version = "0.4.13" }
md-5 = "0.9.1"

