[package]
name = "lares"
version = "0.2.1"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Simple RSS Reader Service (Fever API backend)"
license = "MIT"
homepage = "https://github.com/fanzeyi/lares"
readme = "README.md"
keywords = ["rss", "rssreader", "fever"]
categories = []  # :(

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rusqlite = { version = "0.23", features = ["array", "bundled", "chrono"] }
tide = "0.13.0"
async-std = { version = "1.6", features = ["attributes", "unstable"] }
r2d2_sqlite = "0.16.0"
r2d2 = "0.8.9"
thiserror = "1.0.20"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
structopt = "0.3.16"
anyhow = "1.0.32"
surf = "1.0.3"
prettytable-rs = "0.8.0"
futures = "0.3.5"
chrono = { version = "0.4.13" }
md-5 = "0.9.1"
feed-rs = "0.4.0"
serde_urlencoded = "0.6.1"
quick-xml = "0.18.1"
log = "0.4.11"
femme = "2.1.0"
url = "2.1.1"
either = "1.5.3"
http = "0.1"

[dev-dependencies]
rand = "0.7"
tempfile = "3"
assert_cmd = "1.0.1"
